--- a/HuntKit/HuntKit.csproj
+++ b/HuntKit/HuntKit.csproj
@@ -15,14 +15,14 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>0.0.0.4</Version>
+    <Version>0.0.0.5</Version>
     <Description>A tool kit for Hunting.</Description>
-    <PackageProjectUrl>https://github.com/KirisameVanilla/Template</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/KirisameVanilla/Marisa-s-HuntKit</PackageProjectUrl>
     <DalamudLibPath>$(appdata)\XIVLauncherCN\addon\Hooks\dev\</DalamudLibPath>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
-    <TargetFramework>net8.0-windows8.0</TargetFramework>
-    <RepositoryUrl>https://github.com/KirisameVanilla/Template</RepositoryUrl>
+    <TargetFramework>net9.0-windows</TargetFramework>
+    <RepositoryUrl>https://github.com/KirisameVanilla/Marisa-s-HuntKit</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
@@ -32,6 +32,10 @@
   <ItemGroup>
       <Reference Include="ImGui.NET">
           <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="InteropGenerator.Runtime">
+          <HintPath>$(DalamudLibPath)InteropGenerator.Runtime.dll</HintPath>
           <Private>False</Private>
       </Reference>
   </ItemGroup>
